customer logout
