# customer/api/customer/customer_grpc.pb.go
@@ -23,6 +23,7 @@ const _ = grpc.SupportPackageIsVersion7
 const (
 	Customer_GetCustomer_FullMethodName = "/api.customer.Customer/GetCustomer"
 	Customer_Login_FullMethodName       = "/api.customer.Customer/Login"
+	Customer_Logout_FullMethodName      = "/api.customer.Customer/Logout"
 )
 
 // CustomerClient is the client API for Customer service.
@@ -35,6 +36,8 @@ type CustomerClient interface {
 	GetCustomer(ctx context.Context, in *GetCustomerRequest, opts ...grpc.CallOption) (*GetCustomerReply, error)
 	// 登录
 	Login(ctx context.Context, in *LoginReq, opts ...grpc.CallOption) (*LoginRes, error)
+	// 登出
+	Logout(ctx context.Context, in *LogoutReq, opts ...grpc.CallOption) (*LogoutRes, error)
 }
 
 type customerClient struct {
@@ -63,6 +66,15 @@ func (c *customerClient) Login(ctx context.Context, in *LoginReq, opts ...grpc.C
 	return out, nil
 }
 
+func (c *customerClient) Logout(ctx context.Context, in *LogoutReq, opts ...grpc.CallOption) (*LogoutRes, error) {
+	out := new(LogoutRes)
+	err := c.cc.Invoke(ctx, Customer_Logout_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // CustomerServer is the server API for Customer service.
 // All implementations must embed UnimplementedCustomerServer
 // for forward compatibility
@@ -73,6 +85,8 @@ type CustomerServer interface {
 	GetCustomer(context.Context, *GetCustomerRequest) (*GetCustomerReply, error)
 	// 登录
 	Login(context.Context, *LoginReq) (*LoginRes, error)
+	// 登出
+	Logout(context.Context, *LogoutReq) (*LogoutRes, error)
 	mustEmbedUnimplementedCustomerServer()
 }
 
@@ -85,6 +99,9 @@ func (UnimplementedCustomerServer) GetCustomer(context.Context, *GetCustomerRequ
 }
 func (UnimplementedCustomerServer) Login(context.Context, *LoginReq) (*LoginRes, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Login not implemented")
+}
+func (UnimplementedCustomerServer) Logout(context.Context, *LogoutReq) (*LogoutRes, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Logout not implemented")
 }
 func (UnimplementedCustomerServer) mustEmbedUnimplementedCustomerServer() {}
 
@@ -135,6 +152,24 @@ func _Customer_Login_Handler(srv interface{}, ctx context.Context, dec func(inte
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Customer_Logout_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(LogoutReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CustomerServer).Logout(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Customer_Logout_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CustomerServer).Logout(ctx, req.(*LogoutReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // Customer_ServiceDesc is the grpc.ServiceDesc for Customer service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -149,6 +184,10 @@ var Customer_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Login",
 			Handler:    _Customer_Login_Handler,
+		},
+		{
+			MethodName: "Logout",
+			Handler:    _Customer_Logout_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
